--- a/index.html
+++ b/index.html
@@ -26,18 +26,18 @@
   <section class="results">
     <h2 style="text-align: center;">Student Results</h2>
     <div class="gallery">
-      <img src="E:/ai ticket reselling/results/picture1.png" alt="Result 1">
-      <img src="E:/ai ticket reselling/results/picture1.png" alt="Result 2">
-      <img src="E:/ai ticket reselling/results/picture1.png" alt="Result 3">
-      <img src="E:/ai ticket reselling/results/picture1.png" alt="Result 4">
-      <img src="E:/ai ticket reselling/results/picture1.png" alt="Result 5">
+      <img src="images/picture1.png"> alt="Result 1">
+      <img src="images/picture1.png"> alt="Result 2">
+      <img src="images/picture1.png"> alt="Result 3">
+      <img src="images/picture1.png"> alt="Result 4">
+      <img src="images/picture1.png"> alt="Result 5">
     </div>
   </section>
 
 <section class="pricing">
   <h2 style="text-align: center;">Pricing</h2>
   <div style="text-align: center; padding: 20px;">
-    <img src="E:/ai ticket reselling/results/pricing.png" alt="Pricing Details" style="width: 100%; max-width: 900px; border-radius: 12px; border: 3px solid #ff6a00;">
+    <img src="images/picture1.png"> alt="Pricing Details" style="width: 100%; max-width: 900px; border-radius: 12px; border: 3px solid #ff6a00;">
   </div>
 </section>
   
