--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>AI Ticket Reselling</title>
-  <link rel="stylesheet" href="style.css">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="style.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet" />
 </head>
 <body>
   <header>
@@ -26,22 +26,25 @@
   <section class="results">
     <h2 style="text-align: center;">Student Results</h2>
     <div class="gallery">
-      <img src="images/picture1.png"> alt="Result 1">
-      <img src="images/picture1.png"> alt="Result 2">
-      <img src="images/picture1.png"> alt="Result 3">
-      <img src="images/picture1.png"> alt="Result 4">
-      <img src="images/picture1.png"> alt="Result 5">
+      <img src="images/picture1.png" alt="Result 1">
+      <img src="images/picture2.png" alt="Result 2">
+      <img src="images/picture3.png" alt="Result 3">
+      <img src="images/picture4.png" alt="Result 4">
+      <img src="images/picture5.png" alt="Result 5">
+      <img src="images/picture6.png" alt="Result 6">
+      <img src="images/picture7.png" alt="Result 7">
+      <img src="images/picture8.png" alt="Result 8">
+      <img src="images/picture9.png" alt="Result 9">
+      <img src="images/picture10.png" alt="Result 10">
     </div>
   </section>
 
-<section class="pricing">
-  <h2 style="text-align: center;">Pricing</h2>
-  <div style="text-align: center; padding: 20px;">
-    <img src="images/picture1.png"> alt="Pricing Details" style="width: 100%; max-width: 900px; border-radius: 12px; border: 3px solid #ff6a00;">
-  </div>
-</section>
-  
-
+  <section class="pricing">
+    <h2 style="text-align: center;">Pricing</h2>
+    <div class="gallery">
+      <img src="images/pricing.png" alt="Pricing Details" class="pricing-img">
+    </div>
+  </section>
 
   <section class="faq">
     <h2 style="text-align: center;">Frequently Asked Questions</h2>
