--- a/index.html
+++ b/index.html
@@ -26,23 +26,23 @@
   <section class="results">
     <h2 style="text-align: center;">Student Results</h2>
     <div class="gallery">
-      <img src="images/picture1.png" alt="Result 1">
-      <img src="images/picture2.png" alt="Result 2">
-      <img src="images/picture3.png" alt="Result 3">
-      <img src="images/picture4.png" alt="Result 4">
-      <img src="images/picture5.png" alt="Result 5">
-      <img src="images/picture6.png" alt="Result 6">
-      <img src="images/picture7.png" alt="Result 7">
-      <img src="images/picture8.png" alt="Result 8">
-      <img src="images/picture9.png" alt="Result 9">
-      <img src="images/picture10.png" alt="Result 10">
+      <img src="picture1.png" alt="Result 1">
+      <img src="picture2.png" alt="Result 2">
+      <img src="picture3.png" alt="Result 3">
+      <img src="picture4.png" alt="Result 4">
+      <img src="picture5.png" alt="Result 5">
+      <img src="picture6.png" alt="Result 6">
+      <img src="picture7.png" alt="Result 7">
+      <img src="picture8.png" alt="Result 8">
+      <img src="picture9.png" alt="Result 9">
+      <img src="picture10.png" alt="Result 10">
     </div>
   </section>
 
   <section class="pricing">
     <h2 style="text-align: center;">Pricing</h2>
     <div class="gallery">
-      <img src="images/pricing.png" alt="Pricing Details" class="pricing-img">
+      <img src="pricing.png" alt="Pricing Details" class="pricing-img">
     </div>
   </section>
 
